--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,10 @@
     "compilerOptions": {
         "target": "es6",
         "module": "commonjs",
-        "outDir": "source/dist",
+        "outDir": "dist",
         "removeComments": true,
+        "declaration": true,
+        "declarationMap": true,
         "esModuleInterop": true,
         "strict": true, 
         "skipLibCheck": true,
@@ -12,6 +14,11 @@
         "inlineSourceMap": true
     },
     "include": [
-        "source/src"
-    ]
+        "src"
+    ],
+    "typedocOptions": {
+        "name": "discordutility",
+        "readme": "README.md",
+        "out": "docs"
+    }
 }
